# SingleUserOnlineSystem

./: .gitignore  .gitmodules  BUILD  Makefile  README.md  WORKSPACE  package-lock.json  package.json  单点登录系统设计方案.docx  项目部署指引.txt
SingleUserOnlineClient/: CMakeLists.txt  GypAndroid.mk  Makefile  ThinkDrive.pcap  UserLogin.djinni  djinni_run.sh  libsingleuser.gyp  libsingleuser.target.mk  run_djinni.sh
SingleUserOnlineClient/SingleUserOnlineApp/: build.gradle  gradle.properties  settings.gradle
SingleUserOnlineClient/SingleUserOnlineApp/app/: CMakeLists.txt  build.gradle
SingleUserOnlineClient/SingleUserOnlineApp/app/jni/: Android.mk  Application.mk
SingleUserOnlineClient/SingleUserOnlineApp/app/src/main/: AndroidManifest.xml
SingleUserOnlineClient/SingleUserOnlineApp/app/src/main/java/com/client/user/single/singleuseronlineapp/: LoginStatusCallbackImpl.java  MainActivity.java  UserLoginImpl.java
SingleUserOnlineClient/SingleUserOnlineApp/app/src/main/java/com/single/user/login/: MainActivity.java
SingleUserOnlineClient/SingleUserOnlineApp/app/src/main/res/layout/: activity_main.xml
SingleUserOnlineClient/SingleUserOnlineApp/app/src/main/res/values/: strings.xml
SingleUserOnlineClient/SingleUserOnlineApp/gradle/wrapper/: gradle-wrapper.properties
SingleUserOnlineClient/SingleUserOnlineApp/proto-src/: single_user_online.pb.h
SingleUserOnlineClient/SingleUserOnlineApp/singleuser_djinni_lib/: build.gradle
SingleUserOnlineClient/SingleUserOnlineApp/singleuser_djinni_lib/src/androidTest/java/com/client/user/single/singleuser_djinni_lib/: ExampleInstrumentedTest.java
SingleUserOnlineClient/SingleUserOnlineApp/singleuser_djinni_lib/src/main/: AndroidManifest.xml
SingleUserOnlineClient/SingleUserOnlineApp/singleuser_djinni_lib/src/main/res/values/: strings.xml
SingleUserOnlineClient/SingleUserOnlineClient/: CMakeLists.txt  CommTools.cpp  CommTools.hpp  GlobalData.cpp  GlobalData.hpp  Makefile  bcrypt.c  main.cpp  single_user_online.grpc.pb.h  single_user_online.pb.h  single_user_online_client  single_user_online_client.cpp  single_user_online_client.hpp  user_login_djinni_impl.cpp  user_login_djinni_impl.h
SingleUserOnlineClient/SingleUserOnlineClient.xcodeproj/: project.pbxproj
SingleUserOnlineClient/SingleUserOnlineClient.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
SingleUserOnlineClient/SingleUserOnlineClient.xcodeproj/project.xcworkspace/xcuserdata/castlebai.xcuserdatad/: UserInterfaceState.xcuserstate
SingleUserOnlineClient/SingleUserOnlineClient.xcodeproj/xcuserdata/castlebai.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
SingleUserOnlineClient/SingleUserOnlineClient.xcodeproj/xcuserdata/castlebai.xcuserdatad/xcschemes/: SingleUserOnlineClient.xcscheme  xcschememanagement.plist
SingleUserOnlineClient/djinni-output-temp/: gen.stamp
SingleUserOnlineClient/djinni-output-temp/cpp/: login_status_callback.hpp  user_login.hpp
SingleUserOnlineClient/djinni-output-temp/java/: LoginStatusCallback.java  UserLogin.java
SingleUserOnlineClient/djinni-output-temp/jni/: NativeLoginStatusCallback.cpp  NativeLoginStatusCallback.hpp  NativeUserLogin.cpp  NativeUserLogin.hpp
SingleUserOnlineClient/djinni-output-temp/objc/: TXSLoginStatusCallback+Private.h  TXSUserLogin+Private.h  TXSUserLogin+Private.mm  TXSUserLogin.h
SingleUserOnlineClient/generated-src/cpp/: user_login.hpp
SingleUserOnlineClient/generated-src/java/com/single/user/login/: LoginStatusCallback.java  UserLogin.java
SingleUserOnlineClient/generated-src/jni/: NativeLoginStatusCallback.hpp  NativeUserLogin.cpp
SingleUserOnlineClient/generated-src/objc/: TXSLoginStatusCallback+Private.mm  TXSLoginStatusCallback.h  UserLogin-Bridging-Header.h  UserLogin_LoginStatusCallback+Private.mm  UserLogin_UserLogin+Private.mm  UserLogin_UserLogin.h
SingleUserOnlineServer/: CommTools.js  DBOperations.js  GlobalConf.js  Makefile  SingleUserOnlineImpl.js  single_user_online_grpc_pb.js  single_user_online_pb.js
SingleUserOnlineSvrCPP/: BUILD
SingleUserOnlineSvrCPP/SingleUserOnlineSvrCPP/: GlobalData.cpp  GlobalData.hpp  SingleUserOnlineServiceImpl.cpp
SingleUserOnlineSvrCPP/SingleUserOnlineSvrCPP.xcodeproj/: project.pbxproj
SingleUserOnlineSvrCPP/SingleUserOnlineSvrCPP.xcodeproj/project.xcworkspace/xcuserdata/castlebai.xcuserdatad/: UserInterfaceState.xcuserstate
SingleUserOnlineSvrCPP/SingleUserOnlineSvrCPP.xcodeproj/xcuserdata/castlebai.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
SingleUserOnlineSvrCPP/SingleUserOnlineSvrCPP/db_operation/: SingleUserDbOperation.cpp  SingleUserDbOperation.hpp
SingleUserOnlineSvrCPP/SingleUserOnlineSvrCPP/tools/: CommTools.cpp  CommTools.hpp
generated-src/cpp/: login_status_callback.hpp
generated-src/java/com/single/user/login/: LoginStatusCallback.java  UserLogin.java
generated-src/jni/: NativeLoginStatusCallback.cpp  NativeUserLogin.cpp
generated-src/objc/: UserLogin_LoginStatusCallback+Private.h  UserLogin_LoginStatusCallback.h  UserLogin_UserLogin+Private.h  UserLogin_UserLogin+Private.mm  UserLogin_UserLogin.h
proto/: BUILD  generate.sh  single_user_online.proto
protos/: generate.sh  single_user_online.proto
